Add readme and design md, change referance in test console app to nuGet, fixed some warnings

--- a/SDK/SDK.csproj
+++ b/SDK/SDK.csproj
@@ -1,9 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Oleksii-SDK</Title>
+    <Description>just small homework</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageId>Oleksii-$(AssemblyName)</PackageId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
