--- a/TestSDKApp/TestSDKApp.csproj
+++ b/TestSDKApp/TestSDKApp.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SDK\SDK.csproj" />
+    <PackageReference Include="Oleksii-SDK" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
